Fix #24: Flickering when transitioning to the same page with new content

--- a/templates/app/src/styles/global.less
+++ b/templates/app/src/styles/global.less
@@ -205,3 +205,12 @@ body {
         display: block;
     }
 }
+
+.ui-page .self-toggle {
+    position: absolute;
+    width: 100%;
+    
+    &:nth-child(2) {
+        display: none;
+    }
+}
